update gradle files